contrast accessibility fix

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul#socialLinks a {
 
 ul#socialLinks > *:not(.spacer) {
   transition: 0.16s ease;
-  opacity: 0.5;
+  opacity: 0.75;
 }
 
 ul#socialLinks > *:not(.spacer):hover {
@@ -243,7 +243,7 @@ section {
 }
 
 .discrete {
-  opacity: .50;
+  opacity: .75;
 }
 
 .subtitle {
